package com.pizza.model;

public enum Role {
    CUSTOMER, ADMIN
} 